# hackagotchi

./: .build.yml  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  dev.Dockerfile  docker-compose.yml  gotchi_config.json  last_farming.time  netrun.sh  run.sh  set_debug_log.sh  set_info_log.sh
.github/workflows/: deploy.yml
config/: config_config.json  content.json  hackstead_advancements.json  plant_archetypes.json  possession_archetypes.json  special_users.json
contrib/: _incr_version
hn/: create_transaction.graphql  get_balance.graphql  get_transaction.graphql  pay.graphql  schema.json
src/: banker-log.json  banker.rs  hacksteader.rs  hn_webhook.rs  main.rs  market.rs  slackform.rs  test.rs  verification.rs  yank_config.rs
src/config/: mod.rs
src/core/: category.rs  config.rs  lib.rs  market.rs
src/core/possess/: gotchi.rs  keepsake.rs  mod.rs  seed.rs
src/event/: banker_message.rs  invoice_payment.rs  mod.rs  special_user_message.rs
src/slack/: safety.rs
