[package]
name = "gotchi"
version = "1.2.1"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcor = { git = "https://github.com/hackagotchi/hcor.git" }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git" }
reqwest = { version = "0.10.4", features = ["json"] }
crossbeam-channel = "0.4.2"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.49"
rand = "0.7.3"
rusoto_core = "0.43.0"
rusoto_dynamodb = "0.43.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.4", features = ["compat"] }
regex = "1.3.6"
lazy_static = "1.4.0"
humantime = "2.0.0"
log = "0.4.8"
fern = "0.6"
rusoto_credential = "0.43.0"
chrono = "0.4.13"
