[package]
authors = ["ubuntu"]
edition = "2018"
name = "gotchi"
version = "1.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
crossbeam-channel = "0.4.2"
dotenv = "0.15.0"
fern = "0.6"
futures = {version = "0.3.4", features = ["compat"]}
hcor = {git = "https://github.com/hackagotchi/hcor.git"}
humantime = "2.0.0"
lazy_static = "1.4.0"
log = "0.4.8"
rand = "0.7.3"
regex = "1.3.6"
reqwest = {version = "0.11.1", features = ["json"]}
rocket = {git = "https://github.com/SergioBenitez/Rocket.git", rev = "9d45e786bbac67a5fec0b1cd4653997d84dba4e4"}
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket.git", rev = "9d45e786bbac67a5fec0b1cd4653997d84dba4e4"}
rusoto_core = "0.46.0"
rusoto_credential = "0.46.0"
rusoto_dynamodb = "0.46.0"
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.49"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
